# windows-rs

./: Cargo.toml  com_aggregation_notes.md
crates/libs/bindgen/src/: lib.rs  tree.rs
crates/libs/bindgen/src/rdl/: from_reader.rs
crates/libs/bindgen/src/rust/: cfg.rs  classes.rs  com_methods.rs  constants.rs  delegates.rs  enums.rs  functions.rs  handles.rs  implements.rs  index.rs  interfaces.rs  iterators.rs  mod.rs  standalone.rs  structs.rs  try_format.rs  winrt_methods.rs  writer.rs
crates/libs/bindgen/src/rust/extensions/: mod.rs
crates/libs/core/: Cargo.toml
crates/libs/core/src/: com_object.rs  guid.rs  interface.rs  unknown.rs
crates/libs/core/src/guid/: uuid_integration.rs
crates/libs/core/src/strings/: bstr.rs  hstring.rs
crates/libs/implement/src/: gen.rs  lib.rs  tests.rs
crates/libs/interface/src/: lib.rs
crates/libs/metadata/src/: reader.rs
crates/libs/result/src/: error.rs  hresult.rs
crates/tests/implement_core/src/: com_chain.rs
crates/tests/metadata/tests/: fn_call_size.rs
crates/tests/misc/implement/tests/: aggregate.rs  from_raw_borrowed.rs  into_impl.rs
crates/tests/misc/implement_core/src/: aggregate.rs  com_object.rs  lib.rs
crates/tools/lib/src/: lib.rs
