[package]
name = "windows-core"
version = "0.57.0"
authors = ["Microsoft"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Rust for Windows"
repository = "https://github.com/microsoft/windows-rs"
readme = "readme.md"
categories = ["os::windows-apis"]

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies.windows-targets]
version = "0.52.5"
path = "../targets"

[dependencies.windows-result]
version = "0.1.1"
path = "../result"

[dependencies.uuid]
version = "1.8.0"
optional = true
default-features = false

[dependencies.zerocopy]
version = "0.7.34"
optional = true
default-features = false

[dependencies.zerocopy-derive]
version = "0.7.34"
optional = true
default-features = false

[dependencies]
windows-implement = { path = "../implement",  version = "0.57.0" }
windows-interface = { path = "../interface",  version = "0.57.0" }

[dev-dependencies.windows-bindgen]
version = "0.57.0"
path = "../bindgen"

[features]
default = ["std"]
std = []
zerocopy = ["dep:zerocopy", "dep:zerocopy-derive"]
